[ADD] css Carrot Cake

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -85,6 +85,10 @@ h3{
     background-color: #FEF400;
 }
 
+.h1Carrot{
+    background-color: #FAA41A;
+}
+
 .h2Index{
     font-family: 'Ubuntu Condensed', sans-serif;
     text-transform: uppercase;
